--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dartz: ^0.10.1
   hive: ^2.2.3
   dio: ^5.8.0+1
+  segment_display: ^0.5.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
