--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.5.2
   flutter_bloc: ^9.1.0
   confetti: ^0.8.0
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
