--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.8.0+1
   segment_display: ^0.5.0
   get_it: ^8.0.3
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/json_files/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
