--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   segment_display: ^0.5.0
   get_it: ^8.0.3
   provider: ^6.1.4
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
