--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.1.4
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
