--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   intl: ^0.20.2
   flutter_pdfview: ^1.4.0
   flutter_speed_dial: ^7.0.0
+  flutter_svg: ^2.0.17
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
