--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   dio: ^5.8.0+1
   segment_display: ^0.5.0
   get_it: ^8.0.3
-  provider: ^6.1.4
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
   connectivity_plus: ^6.1.3
@@ -54,6 +53,8 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   flutter_compass: ^0.8.1
   geolocator: ^14.0.0
+  hydrated_bloc: ^10.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
