--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   geolocator: ^14.0.0
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
+  flutter_launcher_icons: ^0.14.3
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
