--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.3
   animated_splash_screen: ^1.3.0
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
