--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+<!-- 🛰️ إذن الموقع -->
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
+<!-- 🌐 إذن الإنترنت -->
+<uses-permission android:name="android.permission.INTERNET"/>
+
+<!-- ⚡ لتعمل الشبكة بدون مشاكل -->
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
+<!-- 📁 إذن التخزين (لو هتحفظ ملفات أو صور) -->
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
+
+<!-- 📦 لو التطبيق يحتاج إرسال إشعارات -->
+<uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     <application
-        android:label="test_app"
+        android:label="نُور"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
