--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,6 @@ dependencies:
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.3
-  animated_splash_screen: ^1.3.0
   internet_connection_checker: ^3.0.1
   geocoding: ^4.0.0
 
@@ -83,7 +82,7 @@ flutter:
   assets:
     - assets/images/
     - assets/pdfs/
-    - assets/jsons/adhkar.json
+    - assets/jsons/
     - assets/fonts/
   #   - images/a_dot_ham.jpeg
   fonts:
@@ -94,6 +93,10 @@ flutter:
     - family: SemiBoldCairo
       fonts:
         - asset: assets/fonts/Cairo-SemiBold.ttf
+          weight: 700
+    - family: DataFontFamily
+      fonts:
+        - asset: assets/fonts/Oswald-Medium.ttf
           weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
