--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   internet_connection_checker: ^3.0.1
   geocoding: ^4.0.0
+  app_settings: ^6.1.1
 
 dev_dependencies:
   flutter_test:
