--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   internet_connection_checker: ^3.0.1
   geocoding: ^4.0.0
   app_settings: ^6.1.1
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   flutter_test:
