--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -2,9 +2,8 @@
 cmake_minimum_required(VERSION 3.14)
 project(test_app LANGUAGES CXX)
 
-# The name of the executable created for the application. Change this to change
-# the on-disk name of your application.
-set(BINARY_NAME "نُور")
+# ✅ استخدم اسم إنجليزي داخلي لتفادي مشاكل CMake
+set(BINARY_NAME "noor")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
