--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_localizations:  # ✅ دعم الترجمة واللغات من SDK مباشرة
+  flutter_localizations:
     sdk: flutter
 
   # UI & Logic
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
-  hydrated_bloc: ^10.0.0
+  hydrated_bloc: ^10.1.1
   flutter_svg: ^2.0.17
   smooth_page_indicator: ^1.2.1
   modal_progress_hud_nsn: ^0.5.1
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.19.0
   segment_display: ^0.5.0
   flutter_pdfview: ^1.4.0
+  animated_text_kit: ^4.2.3
 
 dev_dependencies:
   flutter_test:
