--- a/windows/runner/CMakeLists.txt
+++ b/windows/runner/CMakeLists.txt
@@ -1,40 +1,29 @@
 cmake_minimum_required(VERSION 3.14)
-project(runner LANGUAGES CXX)
 
-# Define the application target. To change its name, change BINARY_NAME in the
-# top-level CMakeLists.txt, not the value here, or `flutter run` will no longer
-# work.
-#
-# Any new source files that you add to the application should be added here.
-add_executable(${BINARY_NAME} WIN32
-  "flutter_window.cpp"
+# إنشاء الملف التنفيذي باسم داخلي (ASCII)
+add_executable(noor
   "main.cpp"
-  "utils.cpp"
-  "win32_window.cpp"
-  "${FLUTTER_MANAGED_DIR}/generated_plugin_registrant.cc"
-  "Runner.rc"
   "runner.exe.manifest"
 )
 
-# Apply the standard set of build settings. This can be removed for applications
-# that need different build settings.
-apply_standard_settings(${BINARY_NAME})
+# إعدادات التجميع القياسية
+target_compile_definitions(noor PRIVATE "UNICODE" "_UNICODE")
+target_compile_features(noor PUBLIC cxx_std_17)
+target_compile_options(noor PRIVATE /W4 /WX /wd"4100")
+target_compile_options(noor PRIVATE /EHsc)
+target_compile_definitions(noor PRIVATE "_HAS_EXCEPTIONS=0")
+target_compile_definitions(noor PRIVATE "$<$<CONFIG:Debug>:_DEBUG>")
 
-# Add preprocessor definitions for the build version.
-target_compile_definitions(${BINARY_NAME} PRIVATE "FLUTTER_VERSION=\"${FLUTTER_VERSION}\"")
-target_compile_definitions(${BINARY_NAME} PRIVATE "FLUTTER_VERSION_MAJOR=${FLUTTER_VERSION_MAJOR}")
-target_compile_definitions(${BINARY_NAME} PRIVATE "FLUTTER_VERSION_MINOR=${FLUTTER_VERSION_MINOR}")
-target_compile_definitions(${BINARY_NAME} PRIVATE "FLUTTER_VERSION_PATCH=${FLUTTER_VERSION_PATCH}")
-target_compile_definitions(${BINARY_NAME} PRIVATE "FLUTTER_VERSION_BUILD=${FLUTTER_VERSION_BUILD}")
+# تضمين ملفات الرأس من Flutter
+target_include_directories(noor PRIVATE
+  "${CMAKE_SOURCE_DIR}/flutter"
+)
 
-# Disable Windows macros that collide with C++ standard library functions.
-target_compile_definitions(${BINARY_NAME} PRIVATE "NOMINMAX")
+# ربط المكتبات بأسلوب keyword (لتفادي خطأ CMake)
+target_link_libraries(noor
+  PUBLIC flutter
+  PUBLIC shlwapi
+)
 
-# Add dependency libraries and include directories. Add any application-specific
-# dependencies here.
-target_link_libraries(${BINARY_NAME} PRIVATE flutter flutter_wrapper_app)
-target_link_libraries(${BINARY_NAME} PRIVATE "dwmapi.lib")
-target_include_directories(${BINARY_NAME} PRIVATE "${CMAKE_SOURCE_DIR}")
-
-# Run the Flutter tool portions of the build. This must not be removed.
-add_dependencies(${BINARY_NAME} flutter_assemble)
+# إعدادات لمصحح Visual Studio
+set_property(TARGET noor PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:noor>")
