--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,3 +74,7 @@ flutter:
       fonts:
         - asset: assets/fonts/Oswald-Medium.ttf
           weight: 700
+    - family: Amiri
+      fonts:
+        - asset: assets/fonts/Amiri-Regular.ttf
+          weight: 700      
