--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,11 @@ dependencies:
   app_settings: ^6.1.1
 
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.20.2
   segment_display: ^0.5.0
   flutter_pdfview: ^1.4.0
   animated_text_kit: ^4.2.3
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
