--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_pdfview: ^1.4.0
   animated_text_kit: ^4.2.3
   flutter_staggered_grid_view: ^0.7.0
+  flutter_local_notifications: ^19.4.0
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
