finish book marks feature and complete quran page drawer

--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -8,6 +8,7 @@
   "unknownCity": "مدينة غير معروفة",
   "skip": "تخطى",
   "next": "التالى",
+  "theIndex": "الفهرس",
   "usesOfActivationLocation": "لكي تتمكن من استخدام:\n\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\"",
   "activationLocationNow": "تفعيل الموقع الآن",
   "activationLocationRequired": "تفعيل الموقع مطلوب",
@@ -51,7 +52,16 @@
     "اللهم صل وسلم على نبينا محمد",
     "لا إله إلا أنت سبحانك إني كنت من الظالمين"
   ],
-  "done": "✔",
+  "adhkarButtonsNames": [
+    "أذكار الصباح",
+    "أذكار المساء",
+    "أذكار بعد السلام من الصلاة المفروضة",
+    "تسابيح",
+    "أذكار النوم",
+    "أذكار الاستيقاظ",
+    "أدعية قرآنية",
+    "أدعية الأنبياء"
+  ],
   "chooseDate": "اختر التاريخ",
   "prayerTimesOfMonthInfoText": "يمكنك عرض مواعيد الصلاة لليوم الذي تحدده، أو تصفح مواعيد الصلاة لجميع أيام الشهر بكل سهولة، وذلك من خلال اختيار التاريخ ثم الضغط على زر الإرسال.",
   "noTafsirAvailable": "لا يوجد تفسير متاح حالياً، حاول استخدام تفسير آخر.",
@@ -70,12 +80,21 @@
   "supplications": ["الصباح", "المساء", "الاستغفار", "الصلاة\nعلى\nالنبى", "اذكار\nعامة\nودعاء"],
   "emojisOfPrayers": ["🌙", "🌤", "☀️", "🌇", "🌥", "🌒"],
   "imagesOfHomePageButtons": [
-    "assets/images/quran.png",
+    "assets/images/book.png",
     "assets/images/quran.png",
     "assets/images/ramadan.png",
     "assets/images/mosque.png",
     "assets/images/compass.png"
   ],
+  "iconsOfTimings": [
+    "assets/images/fajr.png",
+    "assets/images/sunrise.png",
+    "assets/images/dhur.png",
+    "assets/images/asr.png",
+    "assets/images/magrib.png",
+    "assets/images/isha.png"
+  ],
+  "noBookmarks": "لا توجد علامات",
   "settingsSaved": "تم حفظ الإعدادات",
   "khetmAlquran": "اللهم ارحمني بالقرآن، واجعله لي إمامًا ونورًا وهدًى ورحمة،\nاللهم ذكرني منه ما نسيت، وعلمني منه ما جهلت، وارزقني تلاوته آناء الليل وأطراف النهار،\nواجعله لي حجةً يا رب العالمين.\n\nاللهم أصلح لي ديني الذي هو عصمة أمري، وأصلح لي دنياي التي فيها معاشي،\nوأصلح لي آخرتي التي فيها معادي،\nواجعل الحياة زيادةً لي في كل خير، واجعل الموت راحةً لي من كل شر.\n\nاللهم اجعل خير عملي آخره، وخير أيامي يوم ألقاك فيه.\n\nاللهم إني أسألك عيشةً هنية، وميتةً سوية، ومردًا غير مخزٍ ولا فاضح.\n\nاللهم اجعلنا من الذين يُحلون حلاله، ويحرمون حرامه، ويعملون بمحكمه، ويؤمنون بمتشابهه،\nاللهم اجعلنا ممن يقيم حروفه وحدوده، ولا تجعلنا ممن يقيم حروفه ويضيع حدوده.\n\nاللهم اجعل القرآن العظيم ربيع قلوبنا، ونور صدورنا، وجلاء أحزاننا، وذهاب همومنا وغمومنا،\nوسائقنا وقائدنا إلى رضوانك وإلى جناتك جنات النعيم.\n\nاللهم ارزقنا تلاوة القرآن آناء الليل وأطراف النهار على الوجه الذي يرضيك عنا،\nاللهم اجعلنا ممن يقرأه فيرقى، ولا تجعلنا ممن يقرأه فيشقى.\n\nبرحمتك يا أرحم الراحمين،\nوصلى الله وسلم على نبينا محمد، وعلى آله وصحبه أجمعين."
 }
