--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -13,6 +13,7 @@
   "activationLocationNow": "تفعيل الموقع الآن",
   "activationLocationRequired": "تفعيل الموقع مطلوب",
   "saveLocation": "حفظ الموقع",
+  "saveLocationHintText": "يجب تحديد موقعك الآن لحساب مواعيد الصلاة بدقة.\nسيتم حفظ الموقع لاستخدامه تلقائياً في المرات القادمة.\nستستمر مواعيد الصلاة في العمل حتى إذا أغلقت خدمة الموقع لاحقاً.\nيمكنك تغيير الموقع لاحقاً من الإعدادات متى شئت.",
   "gotIt": "فهمت",
   "deniedLocationPermissionAlertDialogText": "تم رفض إذن خدمة الموقع.\n\nلن تتمكن من استخدام الميزات التالية:\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\n\nسيتم عرض هذه الرسالة في الصفحة الرئيسية، ويمكنك تغيير الإعدادات لاحقًا من هذه الرسالة.",
   "features": [
