--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_local_notifications: ^19.4.0
   timezone: ^0.10.1
+  skeletons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
