--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_local_notifications: ^19.4.0
   timezone: ^0.10.1
-  skeletons: ^0.0.3
   url_launcher: ^6.3.2
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
