--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -9,6 +9,7 @@
   "skip": "تخطى",
   "next": "التالى",
   "theIndex": "الفهرس",
+  "done": "تم بحمد الله",
   "unExpectedError": " حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى",
   "usesOfActivationLocation": "لكي تتمكن من استخدام:\n\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\"",
   "activationLocationNow": "تفعيل الموقع الآن",
@@ -16,21 +17,41 @@
   "saveLocation": "حفظ الموقع",
   "saveLocationHintText": "يجب تحديد موقعك الآن لحساب مواعيد الصلاة بدقة.\nسيتم حفظ الموقع لاستخدامه تلقائياً في المرات القادمة.\nستستمر مواعيد الصلاة في العمل حتى إذا أغلقت خدمة الموقع لاحقاً.\nيمكنك تغيير الموقع لاحقاً من الإعدادات متى شئت.",
   "gotIt": "فهمت",
+  "noInternetConnection": "لا يوجد اتصال بالإنترنت، يرجى الاتصال في أقرب وقت ممكن لتحديث البيانات.",
   "deniedLocationPermissionAlertDialogText": "تم رفض إذن خدمة الموقع.\n\nلن تتمكن من استخدام الميزات التالية:\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\n\nسيتم عرض هذه الرسالة في الصفحة الرئيسية، ويمكنك تغيير الإعدادات لاحقًا من هذه الرسالة.",
   "features": [
     "اوقات الصلاة",
     "الاذكار",
-    "السبحة الالكترونية",
+    "الأدعية",
     "القرآن الكريم",
-    "اتجاه القبله"
+    "تفسير القرآن",
+    "السبحة الالكترونية",
+    "جدول رمضان",
+    "اتجاه القبله",
+    "الوضع الداكن"
   ],
   "textsOfOnBorading": [
-    "يتيح لك التطبيق معرفة مواقيت الصلاة بدقة حسب موقعك، مع عد تنازلي يوضح الوقت المتبقي لكل صلاة ، لتكون دائمًا في الموعد وتعيش يومك بإيقاع إيماني منتظم، مع تنبيهات دقيقة تُبقيك على استعداد دائم.",
-    "عيش يومك بسلام داخلي مع ميزة الأذكار اليومية، التي توفر لك نصوصًا من الأذكار مع تنبيهات ذكية لتذكيرك بها في أوقات مناسبة.",
-    "استمتع بتجربة روحانية متكاملة مع السبحة الإلكترونية التي تساعدك في تتبع عدد الذكر، مع إمكانية تسجيل الرقم وحفظه تلقائيًا، أو مسحه بسهولة.",
-    "ستمتع بتجربة روحانية مميزة مع عرض كامل للقرآن الكريم، بخط واضح وواجهة مريحة للعين، مع إمكانية التنقل السلس بين السور والأجزاء و مع دعم للوضع الليلي",
-    "استمتع بسهولة تحديد اتجاه القبلة بدقة، عبر بوصلة مدمجة وداعمة للوضع الليلي."
+    "يتيح لك التطبيق معرفة مواقيت الصلاة بدقة حسب موقعك، مع عدٍّ تنازلي يوضح الوقت المتبقي لكل صلاة، لتكون دائمًا في الموعد وتعيش يومك بإيقاع إيماني منتظم، مع تنبيهات دقيقة تُبقيك على استعداد دائم.",
+    "عِش يومك بسلام داخلي مع ميزة الأذكار اليومية، التي توفر لك نصوصًا من الأذكار مع تنبيهات ذكية لتذكيرك بها في أوقات مناسبة.",
+    "استعن بالله في كل حين مع مجموعة من الأدعية المأثورة والجامعة، لتجعل الدعاء رفيقك في كل وقت وظرف.",
+    "استمتع بتجربة روحانية مميزة مع عرض كامل للقرآن الكريم، بخط واضح وواجهة مريحة للعين، مع إمكانية التنقل السلس بين السور والأجزاء.",
+    "تعمق أكثر في معاني كتاب الله عبر قسم تفسير القرآن، الذي يتيح لك فهم الآيات بأسلوب مبسط وموثوق.",
+    "عِش تجربة روحانية متكاملة مع السبحة الإلكترونية التي تساعدك في تتبع عدد الأذكار، مع إمكانية تسجيل الأعداد وحفظها تلقائيًا أو مسحها بسهولة.",
+    "خطط ليومك في رمضان عبر جدول خاص يوضح مواقيت الإمساك والإفطار، مع تذكيرات مخصصة لاغتنام الشهر الفضيل.",
+    "استمتع بسهولة تحديد اتجاه القبلة بدقة، عبر بوصلة مدمجة وداعمة للوضع الليلي.",
+    "حوِّل واجهة التطبيق إلى الوضع الليلي لتجربة مريحة للعين وأجواء روحانية هادئة."
   ],
+  "imagesOfOnBorading": [
+  "assets/images/prayer.png",
+  "assets/images/اذكار.png",
+  "assets/images/praying.png",
+  "assets/images/book.png",
+  "assets/images/quran.png",
+  "assets/images/ramadan.png",
+  "assets/images/mosque.png",
+  "assets/images/compass.png",
+  "assets/images/moon.png"
+],
   "loadingText": "يتم التحميل...",
   "darkMode": "الوضع الداكن",
   "mainPage": "الصفحة الرئيسية",
@@ -54,6 +75,11 @@
     "اللهم صل وسلم على نبينا محمد",
     "لا إله إلا أنت سبحانك إني كنت من الظالمين"
   ],
+  "otherPagePhotos": [
+    "assets/images/khetm_elquran_photo.png",
+    "assets/images/praying.png",
+    "assets/images/prayer-mat.png"
+  ],
   "adhkarButtonsNames": [
     "أذكار الصباح",
     "أذكار المساء",
@@ -76,11 +102,42 @@
   "no": "لا",
   "areYouSure": "هل أنت متأكد؟",
   "emptyList": "القائمه فارغه",
-  "namesOfPrayers": ["فجر", "ظهر", "عصر", "مغرب", "عشاء"],
-  "namesOfPrayers1": ["فجر", "شروق", "ظهر", "عصر", "مغرب", "عشاء"],
-  "namesOfVoluntaryPrayers": ["السنن\nرواتب", "الشروق", "الضحى", "قيام\nالليل"],
-  "supplications": ["الصباح", "المساء", "الاستغفار", "الصلاة\nعلى\nالنبى", "اذكار\nعامة\nودعاء"],
-  "emojisOfPrayers": ["🌙", "🌤", "☀️", "🌇", "🌥", "🌒"],
+  "namesOfPrayers": [
+    "فجر",
+    "ظهر",
+    "عصر",
+    "مغرب",
+    "عشاء"
+  ],
+  "namesOfPrayers1": [
+    "فجر",
+    "شروق",
+    "ظهر",
+    "عصر",
+    "مغرب",
+    "عشاء"
+  ],
+  "namesOfVoluntaryPrayers": [
+    "السنن\nرواتب",
+    "الشروق",
+    "الضحى",
+    "قيام\nالليل"
+  ],
+  "supplications": [
+    "الصباح",
+    "المساء",
+    "الاستغفار",
+    "الصلاة\nعلى\nالنبى",
+    "اذكار\nعامة\nودعاء"
+  ],
+  "emojisOfPrayers": [
+    "🌙",
+    "🌤",
+    "☀️",
+    "🌇",
+    "🌥",
+    "🌒"
+  ],
   "imagesOfHomePageButtons": [
     "assets/images/book.png",
     "assets/images/quran.png",
@@ -89,7 +146,10 @@
     "assets/images/compass.png",
     "assets/images/other.png"
   ],
-  "list": ["ورد\nتلاوة", "ورد\nتدبر"],
+  "list": [
+    "ورد\nتلاوة",
+    "ورد\nتدبر"
+  ],
   "iconsOfTimings": [
     "assets/images/fajr.png",
     "assets/images/sunrise.png",
