--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   timezone: ^0.10.1
   url_launcher: ^6.3.2
   skeletonizer: ^2.1.0+1
+  morphable_shape: ^2.0.0
+  equatable: ^2.0.7
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
