complete daily adhkar feature and solve some problems

--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -42,16 +42,16 @@
     "حوِّل واجهة التطبيق إلى الوضع الليلي لتجربة مريحة للعين وأجواء روحانية هادئة."
   ],
   "imagesOfOnBorading": [
-  "assets/images/prayer.png",
-  "assets/images/اذكار.png",
-  "assets/images/praying.png",
-  "assets/images/book.png",
-  "assets/images/quran.png",
-  "assets/images/ramadan.png",
-  "assets/images/mosque.png",
-  "assets/images/compass.png",
-  "assets/images/moon.png"
-],
+    "assets/images/prayer.png",
+    "assets/images/اذكار.png",
+    "assets/images/praying.png",
+    "assets/images/book.png",
+    "assets/images/quran.png",
+    "assets/images/ramadan.png",
+    "assets/images/mosque.png",
+    "assets/images/compass.png",
+    "assets/images/moon.png"
+  ],
   "loadingText": "يتم التحميل...",
   "darkMode": "الوضع الداكن",
   "mainPage": "الصفحة الرئيسية",
@@ -158,7 +158,9 @@
     "assets/images/magrib.png",
     "assets/images/isha.png"
   ],
+  "dailyAdhkarEmptyListText": "يمكنك إضافة أذكارك اليومية هنا لتتذكرها وتقرأها يوميا. اضغط على زر الإضافة لإضافة أول ذكر.",
   "noBookmarks": "لا توجد علامات",
   "settingsSaved": "تم حفظ الإعدادات",
-  "khetmAlquran": "اللهم ارحمني بالقرآن، واجعله لي إمامًا ونورًا وهدًى ورحمة،\nاللهم ذكرني منه ما نسيت، وعلمني منه ما جهلت، وارزقني تلاوته آناء الليل وأطراف النهار،\nواجعله لي حجةً يا رب العالمين.\n\nاللهم أصلح لي ديني الذي هو عصمة أمري، وأصلح لي دنياي التي فيها معاشي،\nوأصلح لي آخرتي التي فيها معادي،\nواجعل الحياة زيادةً لي في كل خير، واجعل الموت راحةً لي من كل شر.\n\nاللهم اجعل خير عملي آخره، وخير أيامي يوم ألقاك فيه.\n\nاللهم إني أسألك عيشةً هنية، وميتةً سوية، ومردًا غير مخزٍ ولا فاضح.\n\nاللهم اجعلنا من الذين يُحلون حلاله، ويحرمون حرامه، ويعملون بمحكمه، ويؤمنون بمتشابهه،\nاللهم اجعلنا ممن يقيم حروفه وحدوده، ولا تجعلنا ممن يقيم حروفه ويضيع حدوده.\n\nاللهم اجعل القرآن العظيم ربيع قلوبنا، ونور صدورنا، وجلاء أحزاننا، وذهاب همومنا وغمومنا،\nوسائقنا وقائدنا إلى رضوانك وإلى جناتك جنات النعيم.\n\nاللهم ارزقنا تلاوة القرآن آناء الليل وأطراف النهار على الوجه الذي يرضيك عنا،\nاللهم اجعلنا ممن يقرأه فيرقى، ولا تجعلنا ممن يقرأه فيشقى.\n\nبرحمتك يا أرحم الراحمين،\nوصلى الله وسلم على نبينا محمد، وعلى آله وصحبه أجمعين."
+  "khetmAlquran": "اللهم ارحمني بالقرآن، واجعله لي إمامًا ونورًا وهدًى ورحمة،\nاللهم ذكرني منه ما نسيت، وعلمني منه ما جهلت، وارزقني تلاوته آناء الليل وأطراف النهار،\nواجعله لي حجةً يا رب العالمين.\n\nاللهم أصلح لي ديني الذي هو عصمة أمري، وأصلح لي دنياي التي فيها معاشي،\nوأصلح لي آخرتي التي فيها معادي،\nواجعل الحياة زيادةً لي في كل خير، واجعل الموت راحةً لي من كل شر.\n\nاللهم اجعل خير عملي آخره، وخير أيامي يوم ألقاك فيه.\n\nاللهم إني أسألك عيشةً هنية، وميتةً سوية، ومردًا غير مخزٍ ولا فاضح.\n\nاللهم اجعلنا من الذين يُحلون حلاله، ويحرمون حرامه، ويعملون بمحكمه، ويؤمنون بمتشابهه،\nاللهم اجعلنا ممن يقيم حروفه وحدوده، ولا تجعلنا ممن يقيم حروفه ويضيع حدوده.\n\nاللهم اجعل القرآن العظيم ربيع قلوبنا، ونور صدورنا، وجلاء أحزاننا، وذهاب همومنا وغمومنا،\nوسائقنا وقائدنا إلى رضوانك وإلى جناتك جنات النعيم.\n\nاللهم ارزقنا تلاوة القرآن آناء الليل وأطراف النهار على الوجه الذي يرضيك عنا،\nاللهم اجعلنا ممن يقرأه فيرقى، ولا تجعلنا ممن يقرأه فيشقى.\n\nبرحمتك يا أرحم الراحمين،\nوصلى الله وسلم على نبينا محمد، وعلى آله وصحبه أجمعين.",
+  "dailyAdhkarFieldHint": "اكتب هنا النص (دعاء - ذكر - آية)"
 }
