--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   morphable_shape: ^2.0.0
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
+  image_picker: ^1.2.0
+  animated_number: ^1.0.2
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
