--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   image_picker: ^1.2.0
   animated_number: ^1.0.2
   percent_indicator: ^4.2.5
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
