handel all location problens

--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -13,9 +13,10 @@
   "unExpectedError": " حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى",
   "usesOfActivationLocation": "لكي تتمكن من استخدام:\n\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\"",
   "activationLocationNow": "تفعيل الموقع الآن",
+  "notLocationSaved": "لم يتم حفظ موقعك، لذلك لن تعمل خدمة مواقيت الصلاة. يمكنك حفظ الموقع من خلال الرسالة التي ستظهر في بداية الصفحة الرئيسية.",
   "activationLocationRequired": "تفعيل الموقع مطلوب",
   "saveLocation": "حفظ الموقع",
-  "saveLocationHintText": "يجب تحديد موقعك الآن لحساب مواعيد الصلاة بدقة.\nسيتم حفظ الموقع لاستخدامه تلقائياً في المرات القادمة.\nستستمر مواعيد الصلاة في العمل حتى إذا أغلقت خدمة الموقع لاحقاً.\nيمكنك تغيير الموقع لاحقاً من الإعدادات متى شئت.",
+  "saveLocationHintText": "يجب تحديد موقعك الآن لحساب مواعيد الصلاة بدقة.\nسيتم حفظ الموقع لاستخدامه تلقائياً في المرات القادمة.\nبهذا ستستمر مواعيد الصلاة في العمل حتى إذا أغلقت خدمة الموقع لاحقاً.\nيمكنك تغيير الموقع لاحقاً من الإعدادات متى شئت.",
   "gotIt": "فهمت",
   "noInternetConnection": "لا يوجد اتصال بالإنترنت، يرجى الاتصال في أقرب وقت ممكن لتحديث البيانات.",
   "deniedLocationPermissionAlertDialogText": "تم رفض إذن خدمة الموقع.\n\nلن تتمكن من استخدام الميزات التالية:\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\n\nسيتم عرض هذه الرسالة في الصفحة الرئيسية، ويمكنك تغيير الإعدادات لاحقًا من هذه الرسالة.",
@@ -32,13 +33,13 @@
   ],
   "textsOfOnBorading": [
     "يتيح لك التطبيق معرفة مواقيت الصلاة بدقة حسب موقعك، مع عدٍّ تنازلي يوضح الوقت المتبقي لكل صلاة، لتكون دائمًا في الموعد وتعيش يومك بإيقاع إيماني منتظم، مع تنبيهات دقيقة تُبقيك على استعداد دائم.",
-    "عِش يومك بسلام داخلي مع ميزة الأذكار اليومية، التي توفر لك نصوصًا من الأذكار مع تنبيهات ذكية لتذكيرك بها في أوقات مناسبة.",
+    "عِش يومك بسلام داخلي مع ميزة الأذكار اليومية، التي توفر لك نصوصًا من الأذكار.",
     "استعن بالله في كل حين مع مجموعة من الأدعية المأثورة والجامعة، لتجعل الدعاء رفيقك في كل وقت وظرف.",
-    "استمتع بتجربة روحانية مميزة مع عرض كامل للقرآن الكريم، بخط واضح وواجهة مريحة للعين، مع إمكانية التنقل السلس بين السور والأجزاء.",
+    "استمتع بتجربة روحانية مميزة مع عرض كامل للقرآن الكريم، بخط واضح وواجهة مريحة للعين، مع إمكانية التنقل السلس بين السور.",
     "تعمق أكثر في معاني كتاب الله عبر قسم تفسير القرآن، الذي يتيح لك فهم الآيات بأسلوب مبسط وموثوق.",
     "عِش تجربة روحانية متكاملة مع السبحة الإلكترونية التي تساعدك في تتبع عدد الأذكار، مع إمكانية تسجيل الأعداد وحفظها تلقائيًا أو مسحها بسهولة.",
     "خطط ليومك في رمضان عبر جدول خاص يوضح مواقيت الإمساك والإفطار، مع تذكيرات مخصصة لاغتنام الشهر الفضيل.",
-    "استمتع بسهولة تحديد اتجاه القبلة بدقة، عبر بوصلة مدمجة وداعمة للوضع الليلي.",
+    "استمتع بسهولة تحديد اتجاه القبلة بدقة.",
     "حوِّل واجهة التطبيق إلى الوضع الليلي لتجربة مريحة للعين وأجواء روحانية هادئة."
   ],
   "imagesOfOnBorading": [
