--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -9,6 +9,7 @@
   "skip": "تخطى",
   "next": "التالى",
   "theIndex": "الفهرس",
+  "settings": "الاعدادات",
   "done": "تم بحمد الله",
   "unExpectedError": " حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى",
   "usesOfActivationLocation": "لكي تتمكن من استخدام:\n\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\"",
@@ -163,5 +164,8 @@
   "noBookmarks": "لا توجد علامات",
   "settingsSaved": "تم حفظ الإعدادات",
   "khetmAlquran": "اللهم ارحمني بالقرآن، واجعله لي إمامًا ونورًا وهدًى ورحمة،\nاللهم ذكرني منه ما نسيت، وعلمني منه ما جهلت، وارزقني تلاوته آناء الليل وأطراف النهار،\nواجعله لي حجةً يا رب العالمين.\n\nاللهم أصلح لي ديني الذي هو عصمة أمري، وأصلح لي دنياي التي فيها معاشي،\nوأصلح لي آخرتي التي فيها معادي،\nواجعل الحياة زيادةً لي في كل خير، واجعل الموت راحةً لي من كل شر.\n\nاللهم اجعل خير عملي آخره، وخير أيامي يوم ألقاك فيه.\n\nاللهم إني أسألك عيشةً هنية، وميتةً سوية، ومردًا غير مخزٍ ولا فاضح.\n\nاللهم اجعلنا من الذين يُحلون حلاله، ويحرمون حرامه، ويعملون بمحكمه، ويؤمنون بمتشابهه،\nاللهم اجعلنا ممن يقيم حروفه وحدوده، ولا تجعلنا ممن يقيم حروفه ويضيع حدوده.\n\nاللهم اجعل القرآن العظيم ربيع قلوبنا، ونور صدورنا، وجلاء أحزاننا، وذهاب همومنا وغمومنا،\nوسائقنا وقائدنا إلى رضوانك وإلى جناتك جنات النعيم.\n\nاللهم ارزقنا تلاوة القرآن آناء الليل وأطراف النهار على الوجه الذي يرضيك عنا،\nاللهم اجعلنا ممن يقرأه فيرقى، ولا تجعلنا ممن يقرأه فيشقى.\n\nبرحمتك يا أرحم الراحمين،\nوصلى الله وسلم على نبينا محمد، وعلى آله وصحبه أجمعين.",
-  "dailyAdhkarFieldHint": "اكتب هنا النص (دعاء - ذكر - آية)"
+  "dailyAdhkarFieldHint": "اكتب هنا النص (دعاء - ذكر - آية)",
+  "resetAppWarning": "متابعتك ستؤدي إلى حذف جميع بيانات التطبيق نهائيًا، بما في ذلك الإعدادات والبيانات المحفوظة.\nلا يمكن التراجع عن هذه العملية بعد تنفيذها.\n\nهل تريد المتابعة؟\n\nسيتم إغلاق التطبيق.",
+  "deletingAllData": "جاري حذف جميع البيانات...\nمن فضلك انتظر لحظات",
+  "deleteAllData": "حذف جميع البيانات"
 }
