--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   shared_preferences: ^2.5.3
   image_picker: ^1.2.0
   provider: ^6.1.5+1
+  workmanager: ^0.9.0+2
+  flutter_timezone: ^4.1.1
+  just_audio: ^0.10.4
+  flutter_exit_app: ^1.1.4
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +72,7 @@ flutter:
     - assets/pdfs/
     - assets/jsons/
     - assets/fonts/
+    - assets/sounds/
 
   fonts:
     - family: Cairo
