--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   workmanager: ^0.9.0+2
   flutter_timezone: ^4.1.1
   app_settings: ^6.1.1
+  flutter_exit_app: ^1.1.4
 
 dev_dependencies:
   flutter_test:
