--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_timezone: ^4.1.1
   app_settings: ^6.1.1
   flutter_exit_app: ^1.1.4
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
