--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -10,6 +10,7 @@
   "next": "التالى",
   "theIndex": "الفهرس",
   "settings": "الاعدادات",
+  "update": "تعديل",
   "done": "تم بحمد الله",
   "surahsSearchHintText": "ابحث عن سورة",
   "unExpectedError": " حدث خطأ غير متوقع، يرجى المحاولة مرة أخرى",
