--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -8,6 +8,7 @@
   "unknownCity": "مدينة غير معروفة",
   "skip": "تخطى",
   "next": "التالى",
+  "tryAgain": "إعاده المحاوله",
   "theIndex": "الفهرس",
   "settings": "الاعدادات",
   "update": "تعديل",
