--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -146,6 +146,8 @@
   "imagesOfHomePageButtons": [
     "assets/images/book.png",
     "assets/images/quran.png",
+    "assets/images/search.png",
+    "assets/images/praying.png",
     "assets/images/ramadan.png",
     "assets/images/mosque.png",
     "assets/images/compass.png",
