--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_slidable: ^4.0.1
   lottie: ^3.3.1
   vibration: ^3.1.3
+  flutter_staggered_grid_view: ^0.7.0
+  share_plus: ^12.0.0
 
 dev_dependencies:
   flutter_test:
