--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 android {
     namespace "com.example.test_app"
     compileSdk 35
-    ndkVersion "29.0.13846066" // <-- تم تعديل نسخة NDK هنا
+    ndkVersion "29.0.14206865" // <-- عدلتها لتطابق النسخة المثبتة عندك
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -16,12 +16,12 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
     }
 
     defaultConfig {
         applicationId "com.example.test_app"
-        minSdk 21
+        minSdkVersion flutter.minSdkVersion
         targetSdk 35
         versionCode 1
         versionName "1.0"
