--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   vibration: ^3.1.3
   flutter_staggered_grid_view: ^0.7.0
   share_plus: ^12.0.0
+  just_audio: ^0.10.5
 
 dev_dependencies:
   flutter_test:
