--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   share_plus: ^12.0.0
   just_audio: ^0.10.5
   audio_video_progress_bar: ^2.0.3
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
