--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   audio_video_progress_bar: ^2.0.3
   percent_indicator: ^4.2.5
   flutter_launcher_icons: ^0.14.4
+  speech_to_text: ^7.3.0
+  string_similarity: ^2.1.1
 
 dev_dependencies:
   flutter_test:
