add quran hifz button

--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -161,6 +161,7 @@
     "assets/images/ramadan.png",
     "assets/images/mosque.png",
     "assets/images/compass.png",
+    "assets/images/recitersImages/reciter.png",
     "assets/images/other.png"
   ],
   "list": [
