--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -24,6 +24,7 @@
   "gotIt": "فهمت",
   "noInternetConnection": "لا يوجد اتصال بالإنترنت، يرجى الاتصال في أقرب وقت ممكن لتحديث البيانات.",
   "deniedLocationPermissionAlertDialogText": "تم رفض إذن خدمة الموقع.\n\nلن تتمكن من استخدام الميزات التالية:\n• مواقيت الصلاة حسب موقعك\n• تحديد اتجاه القبلة بدقة\n\nسيتم عرض هذه الرسالة في الصفحة الرئيسية، ويمكنك تغيير الإعدادات لاحقًا من هذه الرسالة.",
+  "createNewPlan": "بدء خطة جديده",
   "features": [
     "اوقات الصلاة",
     "الاذكار",
