--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   speech_to_text: ^7.3.0
   string_similarity: ^2.1.1
+  marquee: ^2.3.0
+  just_audio_background: ^0.0.1-beta.17
 
 dev_dependencies:
   flutter_test:
